welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:47: error: not found: value faireFCarre
faireFCarre();
^